--- a/scudio/index.html
+++ b/scudio/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://scudio.novoken.net" />
-  <script>
-    window.location.href = "https://scudio.novoken.net";
-  </script>
-  <title>Redirecting…</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7faf7;
+      color: #111;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      opacity: 0;
+      animation: fade 0.5s ease-out forwards;
+    }
+    @keyframes fade { to { opacity: 1; } }
+  </style>
+
+  <meta http-equiv="refresh" content="0.1; url=https://scudio.novoken.net" />
 </head>
 <body>
-  Redirecting to Scudio…
+  Taking you to Scudio…
 </body>
 </html>
